等待录音暂时隐藏

--- a/WebRoot/rule/scenariosCallOut.html
+++ b/WebRoot/rule/scenariosCallOut.html
@@ -275,7 +275,7 @@
                     </div>
                     <input class="easyui-textbox" name="txt_dtmf_answer" multiline="true" style="width: 240px;height: 100px;"
                            data-options="prompt:'请输入AI无法识别时,反问用户的话术(&quot;*&quot;号请用&quot;星&quot;字替换，&quot;#&quot;字请用&quot;井&quot;字替换)'"/></div>
-                <div class="form-div">
+                <div class="form-div" style="display:none;">
                     <span width="30%">等待录音</span>
                     <span style="float: right;"><input class="easyui-combobox" id="comb_sentence_var" data-options="prompt:'请选择变量'" editable="false" style="width: 150px;"/></span>
                 </div>
@@ -305,7 +305,7 @@
                     <div class="form-div"><span style='color:red'>*</span>按键超时话术:</div>
                     <input class="easyui-textbox" name="txt_press_timeout_answer" multiline="true" style="width: 240px;height: 100px" data-options="prompt:'请输入按键超时话术(&quot;*&quot;号请用&quot;星&quot;字替换，&quot;#&quot;字请用&quot;井&quot;字替换)'"/>
                 </div>
-                <div class="form-div">
+                <div class="form-div" style="display:none;">
                     <span width="30%">等待录音</span>
                     <span style="float: right;"><input class="easyui-combobox" id="comb_press_timeout_answer_var" data-options="prompt:'请选择变量'" editable="false" style="width: 150px;"/></span>
                 </div>
