呼入流程开发完成

--- a/WebRoot/rule/scenariosCallIn.html
+++ b/WebRoot/rule/scenariosCallIn.html
@@ -247,7 +247,7 @@
 							</span>
 						</td>
 					</tr>
-					<tr>
+					<tr id="collectionform-interactiveType-tr">
 						<td>
 							<span><span style='color:red'>*</span>交互类型：</span>
 							<span>
@@ -258,7 +258,7 @@
 					</tr>
 					<tr id="collectionform-collectionWords-tr">
 						<td>
-							<span><span style='color:red'>*</span>反问话术：</span>
+							<span><span style='color:red'>*</span>询问文本：</span>
 							<span><textarea id="collectionWords" style="width: 240px; height:100px; font-size: 12px;"></textarea></span>
 						</td>
 					</tr>
